--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <p>Vendas = R$ 6,0000</p>
     <a href="index.html">voltar para página inicial</a>
 </body>
 </html>
