Valor de vendas Jan Fev

--- a/vendas.html
+++ b/vendas.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
-    <p>Vendas = R$ 7,0000</p>
+    <p>Vendas Jan = R$ 7,0000</p>
+    <p>Vendas Fev = R$ 8,0000</p>
+
     <a href="index.html">voltar para página inicial</a>
 </body>
 </html>
