--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Página inicial</h1>
     <a href="vendas.html">Ir para página de vendas</a>
+    <a href="blog.html">Ir para página do blog</a>
 </body>
 </html>
