--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Página de blog</h1>
     <p>Post número 1:</p>
-    <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repellat suscipit quae rerum explicabo neque nobis aut exercitationem assumenda amet. Vero excepturi temporibus porro possimus voluptatum fugiat et rerum incidunt.</p2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repellat suscipit quae rerum explicabo neque nobis aut exercitationem assumenda amet. Vero excepturi temporibus porro possimus voluptatum fugiat et rerum incidunt.</p>
+    <p>Post número 2:</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, adipisci animi cum iusto aliquid nemo mollitia temporibus, quam eos distinctio beatae veritatis ad pariatur itaque quae, dicta doloribus ullam voluptatibus.</p>
 
     <a href="index.html">voltar para página inicial</a>
 </body>
