push atrasado fail

--- a/preços.html
+++ b/preços.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
-    <a href="vendas.html">Ir para página de vendas</a>
-    <a href="blog.html">Ir para página do blog</a>
-    <a href="preços.html">Ir para página do blog</a>
+    <h1>Página de preços</h1>
+    <p>preço lite= R$ 7,0000</p>
+    <p>preço plus = R$ 8,0000</p>
+
+    <a href="index.html">voltar para página inicial</a>
 </body>
 </html>
